--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "ts-node": "^10.7.0",
     "@types/node": "^17.0.31",
     "webpack": "^5.72.0",
-    "typescript": "^4.6.4"
+    "typescript": "^4.6.4",
+    "glob": "^8.0.1",
+    "@types/glob": "latest"
   },
   "scripts": {
     "prebuild": "ts-node scripts/pre_build.ts",
-    "build": "turbo run build"
+    "build": "turbo run build",
+    "dev": "turbo run dev"
   }
 }
