--- a/services/health_service/.gitignore
+++ b/services/health_service/.gitignore
@@ -1,5 +1,6 @@
 # compiled output
-dist
+/dist
+/node_modules
 
 # Logs
 logs
@@ -33,6 +34,4 @@ lerna-debug.log*
 !.vscode/launch.json
 !.vscode/extensions.json
 
-services/**/*.proto
-node_modules
-.env
+grpc
