--- a/services/health_service/tsconfig.json
+++ b/services/health_service/tsconfig.json
@@ -16,7 +16,6 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false,
-    "moduleResolution": "node"
+    "noFallthroughCasesInSwitch": false
   }
 }
