--- a/services/transaction_service/package.json
+++ b/services/transaction_service/package.json
@@ -21,27 +21,29 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^8.0.0",
-    "@nestjs/core": "^8.0.0",
-    "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/common": "^8.4.4",
+    "@nestjs/core": "^8.4.4",
+    "@nestjs/mongoose": "^9.0.3",
+    "@nestjs/platform-express": "^8.4.4",
+    "common": "*",
+    "mongoose": "^6.3.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0",
-    "common": "*"
+    "rxjs": "^7.2.0"
   },
   "devDependencies": {
+    "@grpc/grpc-js": "^1.6.7",
+    "@grpc/proto-loader": "^0.6.12",
     "@nestjs/cli": "^8.2.5",
+    "@nestjs/microservices": "^8.4.4",
     "@nestjs/schematics": "^8.0.11",
     "@nestjs/testing": "^8.4.4",
-    "@nestjs/microservices": "^8.4.4",
     "@types/express": "^4.17.13",
     "@types/jest": "27.5.0",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
-    "@grpc/grpc-js": "^1.6.7",
-    "@grpc/proto-loader": "^0.6.12",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
