--- a/turbo.json
+++ b/turbo.json
@@ -1,6 +1,9 @@
 {
   "$schema": "https://turborepo.org/schema.json",
   "baseBranch": "origin/main",
+  "globalDependencies": [
+    ".env"
+  ],
   "pipeline": {
     "build": {
       "dependsOn": ["^build"],
@@ -14,6 +17,9 @@
       "outputs": []
     },
     "dev": {
+      "cache": false
+    },
+    "debug": {
       "cache": false
     }
   }
