fix: add docs app

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "etdstats",
   "version": "1.0.0",
   "main": "index.js",
+  "private": true,
   "repository": "https://github.com/etherdata-blockchain/etdstats.git",
   "author": "sirily11 <sirily1997@gmail.com>",
   "license": "MIT",
