--- a/packages/storage_model/package.json
+++ b/packages/storage_model/package.json
@@ -11,12 +11,14 @@
   "author": "sirily11",
   "license": "ISC",
   "dependencies": {
-    "@nestjs/mongoose": "^9.0.3",
     "mongoose": "^6.3.3",
-    "@nestjs/common": "^8.4.4",
-    "@nestjs/core": "^8.4.4",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.5.5"
+  },
+  "peerDependencies": {
+    "@nestjs/common": "^8.4.4",
+    "@nestjs/core": "^8.4.4",
+    "@nestjs/mongoose": "^9.0.3"
   },
   "devDependencies": {
     "@types/node": "^17.0.31",
