--- a/services/transaction_service/package.json
+++ b/services/transaction_service/package.json
@@ -25,11 +25,12 @@
     "@nestjs/core": "^8.4.4",
     "@nestjs/mongoose": "^9.0.3",
     "@nestjs/platform-express": "^8.4.4",
-    "common": "workspace:*",
+    "common": "*",
     "mongoose": "^6.3.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.5.5"
+    "rxjs": "^7.5.5",
+    "storage-model": "*"
   },
   "devDependencies": {
     "@grpc/grpc-js": "^1.6.7",
