--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "etdstats",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "main": "index.js",
+  "private": true,
   "repository": "https://github.com/etherdata-blockchain/etdstats.git",
   "author": "sirily11 <sirily1997@gmail.com>",
   "license": "MIT",
@@ -11,16 +12,25 @@
     "packages"
   ],
   "dependencies": {
-    "turbo": "^1.2.6"
+    "turbo": "^1.2.8"
   },
   "devDependencies": {
     "ts-node": "^10.7.0",
     "@types/node": "^17.0.31",
-    "webpack": "^5.72.0",
-    "typescript": "^4.6.4"
+    "webpack": "^5.72.1",
+    "typescript": "^4.6.4",
+    "glob": "^8.0.1",
+    "@types/glob": "latest",
+    "release-it": "^15.0.0",
+    "@release-it/conventional-changelog": "^5.0.0",
+    "@release-it/bumper": "^4.0.0"
   },
   "scripts": {
     "prebuild": "ts-node scripts/pre_build.ts",
-    "build": "turbo run build"
+    "build": "turbo run build",
+    "test": "turbo run test",
+    "dev": "turbo run dev",
+    "release": "release-it --no-requireCleanWorkingDir",
+    "release-dry": "release-it --no-requireCleanWorkingDir --dry-run"
   }
 }
