--- a/services/transaction_service/package.json
+++ b/services/transaction_service/package.json
@@ -10,7 +10,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -21,35 +21,43 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^8.0.0",
-    "@nestjs/core": "^8.0.0",
-    "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/common": "^8.4.4",
+    "@nestjs/core": "^8.4.4",
+    "@nestjs/mongoose": "^9.0.3",
+    "@nestjs/platform-express": "^8.4.4",
+    "common": "*",
+    "mongoose": "^6.3.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.5.5",
+    "storage-model": "*"
   },
   "devDependencies": {
-    "@nestjs/cli": "^8.0.0",
-    "@nestjs/schematics": "^8.0.0",
-    "@nestjs/testing": "^8.0.0",
+    "@grpc/grpc-js": "^1.6.7",
+    "@grpc/proto-loader": "^0.6.12",
+    "@nestjs/cli": "^8.2.5",
+    "@nestjs/microservices": "^8.4.4",
+    "@nestjs/schematics": "^8.0.11",
+    "@nestjs/testing": "^8.4.4",
     "@types/express": "^4.17.13",
     "@types/jest": "27.5.0",
-    "@types/node": "^16.0.0",
-    "@types/supertest": "^2.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "eslint": "^8.0.1",
-    "eslint-config-prettier": "^8.3.0",
+    "@types/node": "^17.0.31",
+    "@types/supertest": "^2.0.12",
+    "@typescript-eslint/eslint-plugin": "^5.23.0",
+    "@typescript-eslint/parser": "^5.23.0",
+    "eslint": "^8.15.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "jest": "28.0.3",
-    "prettier": "^2.3.2",
-    "source-map-support": "^0.5.20",
-    "supertest": "^6.1.3",
-    "ts-jest": "28.0.1",
-    "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
+    "jest": "28.1.0",
+    "prettier": "^2.6.2",
+    "source-map-support": "^0.5.21",
+    "supertest": "^6.2.3",
+    "ts-jest": "28.0.2",
+    "ts-loader": "^9.3.0",
+    "ts-node": "^10.7.0",
     "tsconfig-paths": "4.0.0",
-    "typescript": "^4.3.5"
+    "typescript": "^4.6.4",
+    "webpack": "^5.72.1"
   },
   "jest": {
     "moduleFileExtensions": [
