feat: update post install script

--- a/.release-it.json
+++ b/.release-it.json
@@ -5,6 +5,9 @@
   "github": {
     "release": true
   },
+  "git": {
+    "requireCleanWorkingDir": false
+  },
   "plugins": {
     "@release-it/conventional-changelog": {
       "preset": "angular",
