--- a/services/transaction_service/package.json
+++ b/services/transaction_service/package.json
@@ -1,18 +1,16 @@
 {
   "name": "transaction_service",
-  "version": "0.2.0",
+  "version": "^0.2.0",
   "description": "",
   "author": "",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "nest build",
+    "build": "nest build && node scripts/compile.js",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
     "dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start": "node dist/index.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -25,12 +23,12 @@
     "@nestjs/core": "^8.4.4",
     "@nestjs/mongoose": "^9.0.3",
     "@nestjs/platform-express": "^8.4.4",
-    "common": "*",
-    "mongoose": "^6.3.3",
+    "common": "workspace:*",
+    "mongoose": "6.3.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.5",
-    "storage-model": "*"
+    "storage-model": "workspace:*"
   },
   "devDependencies": {
     "@grpc/grpc-js": "^1.6.7",
@@ -39,6 +37,7 @@
     "@nestjs/microservices": "^8.4.4",
     "@nestjs/schematics": "^8.0.11",
     "@nestjs/testing": "^8.4.4",
+    "@vercel/ncc": "^0.33.4",
     "@types/express": "^4.17.13",
     "@types/jest": "27.5.0",
     "@types/node": "^17.0.31",
