--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,6 +27,36 @@ jobs:
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
 
+  docker-service:
+    name: Build dockerized services
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        app: ["health_service", "transaction_service"]
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build and push ${{ matrix.app }}
+        uses: docker/build-push-action@v3
+        with:
+          context: ./
+          file: ./docker/services/service.dockerfile
+          platforms: linux/amd64
+          push: false
+          tags: ghcr.io/${{ github.repository }}:pr-${{ github.event.number }}
+          build-args: |
+            APP_NAME=${{ matrix.app }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
   release:
     env:
       TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
