--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -15,11 +15,16 @@
     "@mui/material": "^5.7.0",
     "mobx": "^6.5.0",
     "next": "12.1.6",
-    "openapi_specs": "*",
+    "openapi_specs": "workspace:*",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "redoc": "2.0.0-rc.67",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "babel-core": "^6.26.3",
+    "core-js": "^3.22.5",
+    "react-is": "^18.1.0",
+    "webpack": "^5.72.1",
+    "@babel/core": "^7.17.10"
   },
   "devDependencies": {
     "@types/node": "17.0.31",
