--- a/services/health_service/package.json
+++ b/services/health_service/package.json
@@ -7,12 +7,11 @@
   "license": "UNLICENSED",
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "nest build",
+    "build": "nest build && ncc build dist/main.js",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
     "dev": "nest start --watch",
     "debug": "nest start --debug --watch",
-    "prod": "node dist/main",
+    "start": "node dist/index.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -29,13 +28,14 @@
     "rxjs": "^7.5.5",
     "@grpc/grpc-js": "^1.6.7",
     "@grpc/proto-loader": "^0.6.12",
-    "common": "*"
+    "common": "workspace:*"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.2.5",
     "@nestjs/schematics": "^8.0.11",
     "@nestjs/testing": "^8.4.4",
     "@nestjs/microservices": "^8.4.4",
+    "@vercel/ncc": "^0.33.4",
     "webpack": "^5.72.1",
     "@types/express": "^4.17.13",
     "@types/jest": "27.5.0",
