--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,6 +19,7 @@ jobs:
           node-version: "16"
           cache: "pnpm"
       - run: pnpm install
+      - run: pnpm lint
       - run: pnpm build
       - run: pnpm test
       - run: pnpm release-dry
