--- a/packages/openapi_specs/specs/transaction_service.spec.yaml
+++ b/packages/openapi_specs/specs/transaction_service.spec.yaml
@@ -72,6 +72,12 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/error"
+        "400":
+          description: "Not found"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/error"
 
 
 components:
