feat: migrate to packages

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,7 +33,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        app: ["health_service", "transaction_service"]
+        app: ["transaction_service"]
     steps:
       - uses: actions/checkout@v2
       - name: Set up Docker Buildx
