--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,7 +3,7 @@ on:
   push:
 
 jobs:
-  test:
+  test-node:
     env:
       TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
       TURBO_TEAM: ${{ secrets.TURBO_TEAM }}
@@ -27,15 +27,28 @@ jobs:
         uses: codecov/codecov-action@v1
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
+  test-swift-packages:
+    name: "Test Swift Packages"
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        package: ["common", "env", "model"]
+    steps:
+      - uses: actions/checkout@v3
+      - uses: swift-actions/setup-swift@v1
+      - name: Test ${{ matrix.package }}
+        run: swift test
+        working-directory: swift_packages/${{ matrix.package }}
 
   docker-service:
     name: Build dockerized services
     runs-on: ubuntu-latest
+    needs: [test-swift-packages]
     strategy:
       matrix:
         app: ["transaction_service"]
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Set up Docker Buildx
         id: buildx
         uses: docker/setup-buildx-action@v2
@@ -63,7 +76,7 @@ jobs:
       TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
       TURBO_TEAM: ${{ secrets.TURBO_TEAM }}
     if: ${{ (github.event.pusher.name != 'github action') && (github.ref == 'refs/heads/main') }}
-    needs: [ test ]
+    needs: [ test-node, test-swift-packages, docker-service ]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
