--- a/node_packages/openapi_specs/specs/health_service.spec.yaml
+++ b/node_packages/openapi_specs/specs/health_service.spec.yaml
@@ -40,6 +40,42 @@ components:
       type: object
       required: [ "reason" ]
       properties:
-        relatedServices:
-          type: string
+        services:
+          type: "array"
+          title: Services
+          items:
+            type: "object"
+            properties:
+              status:
+                type: "string"
+                enum:
+                  - "ok"
+                  - "warning"
+                  - "error"
+              total:
+                type: number
+                example: 11
+                description: "Total number of child services"
+              
+              numHealthyServices:
+                type: number
+                example: 10
+                description: Number of services in healthy condition
+              isLeaf:
+                type: boolean
+                example: true
+                description: If this is the leaf node (no children)
+              services:
+                type: array
+                minItems: 0
+                items:
+                  type: object
+                  $ref: "#/components/schemas/error"
+                  
+            required:
+              - status
+              - total
+              - numHealthyServices
+              - isLeaf
+              - services
 
