feat: update health spec

--- a/node_packages/openapi_specs/specs/health_service.spec.yaml
+++ b/node_packages/openapi_specs/specs/health_service.spec.yaml
@@ -28,6 +28,10 @@ paths:
       responses:
         "200":
           description: "Server is up"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/error"
         "500":
           description: "Server is down"
           content:
