--- a/node_packages/openapi_specs/package.json
+++ b/node_packages/openapi_specs/package.json
@@ -18,6 +18,7 @@
     "typescript": "^4.6.4",
     "yaml": "^2.0.1",
     "nunjucks": "^3.2.3",
-    "@types/nunjucks": "latest"
+    "@types/nunjucks": "latest",
+    "openapi_compiler": "workspace:*"
   }
 }
