--- a/node_packages/openapi_specs/specs/health_service.spec.yaml
+++ b/node_packages/openapi_specs/specs/health_service.spec.yaml
@@ -13,9 +13,9 @@ tags:
     description: "Get server's health info"
 
 servers:
-  - url: stats.etdchain.net/v3/transaction
+  - url: https://api.stats.etdchain.net/v3/transaction
     description: Production server
-  - url: stats.debugchain.net/v3/transaction
+  - url: https://api.stats.debugchain.net/v3/transaction
     description: Testing server
 
 paths:
@@ -28,6 +28,10 @@ paths:
       responses:
         "200":
           description: "Server is up"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/error"
         "500":
           description: "Server is down"
           content:
