--- a/node_packages/openapi_specs/specs/transaction_service.spec.yaml
+++ b/node_packages/openapi_specs/specs/transaction_service.spec.yaml
@@ -13,9 +13,9 @@ tags:
     description: "Get server's health info"
 
 servers:
-  - url: stats.etdchain.net/v3/transaction
+  - url: https://api.stats.etdchain.net/v3/transaction
     description: Production server
-  - url: stats.debugchain.net/v3/transaction
+  - url: https://api.stats.debugchain.net/v3/transaction
     description: Testing server
 
 paths:
@@ -28,12 +28,16 @@ paths:
       responses:
         "200":
           description: "Server is up"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/reason"
         "500":
           description: "Server is down"
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/error"
+                $ref: "#/components/schemas/reason"
 
   /{id}:
     get:
@@ -85,18 +89,18 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/error"
+                $ref: "#/components/schemas/reason"
         "400":
           description: "Not found"
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/error"
+                $ref: "#/components/schemas/reason"
 
 
 components:
   schemas:
-    error:
+    reason:
       type: object
       required: [ "reason" ]
       properties:
