--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,10 +40,26 @@ jobs:
         run: swift test
         working-directory: swift_packages/${{ matrix.package }}
 
+  test-swift-services:
+    name: "Test Swift Packages"
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        app:  ["transaction_service"]
+    steps:
+      - uses: actions/checkout@v3
+      - uses: swift-actions/setup-swift@v1
+      - name: Test ${{ matrix.app }}
+        run: swift test
+        working-directory: services/${{ matrix.app }}
+        env:
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+          RPC_URL: ${{ secrets.RPC_URL }}
+
   docker-service:
     name: Build dockerized services
     runs-on: ubuntu-latest
-    needs: [test-swift-packages]
+    needs: [test-swift-packages, test-swift-services]
     strategy:
       matrix:
         app: ["transaction_service"]
