--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   transaction_service:
-    image: ghcr.io/etherdata-blockchain/etdstats/transaction_service:0.9.1
+    image: ghcr.io/etherdata-blockchain/etdstats/transaction_service:0.12.0
     build:
       context: .
       dockerfile: docker/services/service.dockerfile
@@ -14,6 +14,7 @@ services:
     environment:
       - RPC_URL=${RPC_URL}
       - DATABASE_URL=${DATABASE_URL}
+      - REDIS_URL=${REDIS_URL}
   redis:
     restart: always
     container_name: redis
