--- a/node_packages/openapi_compiler/package.json
+++ b/node_packages/openapi_compiler/package.json
@@ -17,7 +17,8 @@
     "openapi-types": "^12.0.0",
     "ts-jest": "^28.0.5",
     "ts-node": "^10.8.1",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "@typescript-eslint/typescript-estree": "5.29.0"
   },
   "dependencies": {
     "yaml": "^2.0.1"
