--- a/apps/etdstats/package.json
+++ b/apps/etdstats/package.json
@@ -1,30 +1,27 @@
 {
-  "name": "docs",
-  "version": "0.13.0",
+  "name": "etdstats",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --port 3001",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@babel/core": "^7.18.5",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.5",
-    "mobx": "^6.6.0",
     "next": "12.1.6",
-    "openapi_specs": "workspace:*",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "redoc": "2.0.0-rc.72",
-    "styled-components": "^5.3.5",
-    "babel-core": "^6.26.3",
-    "core-js": "^3.23.2",
-    "react-is": "^18.2.0",
-    "webpack": "^5.73.0",
-    "@babel/core": "^7.18.5"
+    "ui": "workspace:*",
+    "openapi_client": "workspace:*",
+    "axios": "0.27.2",
+    "next-transpile-modules": "9.0.0",
+    "ethers": "5.6.9"
   },
   "devDependencies": {
     "@types/node": "18.0.0",
