--- a/apps/etdstats/package.json
+++ b/apps/etdstats/package.json
@@ -14,14 +14,18 @@
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.5",
+    "axios": "0.27.2",
+    "dayjs": "^1.11.3",
+    "ethers": "5.6.9",
     "next": "12.1.6",
+    "next-transpile-modules": "9.0.0",
+    "openapi_client": "workspace:*",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "ui": "workspace:*",
-    "openapi_client": "workspace:*",
-    "axios": "0.27.2",
-    "next-transpile-modules": "9.0.0",
-    "ethers": "5.6.9"
+    "friendly-numbers": "1.0.1",
+    "@mui/x-data-grid": "^5.12.2",
+    "@mui/system": "5.8.5",
+    "ui": "workspace:*"
   },
   "devDependencies": {
     "@types/node": "18.0.0",
