--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -45,7 +45,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        app:  ["transaction_service"]
+        app:  ["transaction_service", "analytics_service"]
     services:
       redis:
         image: redis:alpine
