feat: add analytics ui support

--- a/apps/etdstats/package.json
+++ b/apps/etdstats/package.json
@@ -28,7 +28,8 @@
     "ui": "workspace:*",
     "recharts": "^2.1.11",
     "prop-types": "15.8.1",
-    "metamask-react": "2.4.0"
+    "metamask-react": "2.4.0",
+    "react-query": "3.39.1"
   },
   "devDependencies": {
     "@types/node": "18.0.0",
