--- a/node_packages/openapi_specs/specs/analytics_service.yaml
+++ b/node_packages/openapi_specs/specs/analytics_service.yaml
@@ -13,13 +13,13 @@ tags:
     description: "Get server's health info"
 
 servers:
-  - url: https://api.etdchain.net/stats/transaction
+  - url: https://api.etdchain.net/stats/analytics
     description: Production server
-  - url: https://api.debugchain.net/stats/transaction
+  - url: https://api.debugchain.net/stats/analytics
     description: Testing server
 
 paths:
-  /analytics:
+  /:
     post:
       tags:
         - "analytics"
