--- a/node_packages/ui/package.json
+++ b/node_packages/ui/package.json
@@ -22,6 +22,7 @@
     "@mui/x-data-grid": "5.12.2",
     "@mui/system": "5.8.4",
     "recharts": "2.1.11",
-    "metamask-react": "2.4.0"
+    "metamask-react": "2.4.0",
+    "next": "12.1.6"
   }
 }
