--- a/node_packages/openapi_specs/specs/node_service.yaml
+++ b/node_packages/openapi_specs/specs/node_service.yaml
@@ -1,37 +1,41 @@
 openapi: "3.0.0"
 info:
-  description: "This belongs part of ETDStats microservices which will provide a analytics service"
+  description: "This belongs part of ETDStats microservices which will provide a node service. Pending!"
   version: "1.0.0"
-  title: "Analytics service"
+  title: "Node service"
   termsOfService: "https://github.com/etherdata-blockchain"
 
 
 tags:
-  - name: "analytics"
+  - name: "node"
     description: "Get blocks and transactions details"
   - name: "health"
     description: "Get server's health info"
 
 servers:
-  - url: https://api.etdchain.net/stats/transaction
+  - url: https://api.etdchain.net/stats/node
     description: Production server
-  - url: https://api.debugchain.net/stats/transaction
+  - url: https://api.debugchain.net/stats/node
     description: Testing server
 
 paths:
-  /analytics:
+  /info:
     post:
       tags:
-        - "analytics"
-      summary: "Send analytics data to server"
-      description: "Will returns the analytics result from server"
+        - "node"
+      summary: "Submit latest block info"
       responses:
-        "201":
+        "200":
           description: "OK"
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/analytics"
+  /login:
+    post:
+      tags:
+        - node
+      summary: Log in
+      responses:
+        201:
+          description: "OK"
+
   /health:
     get:
       tags:
@@ -53,17 +57,5 @@ paths:
                 $ref: "health_service.spec.yaml#/components/schemas/error"
 components:
   schemas:
-    analytics:
+    node-info:
       type: object
-      required: [ "reason" ]
-      properties:
-        mobile:
-          type: number
-          description: Total number of mobile vistors
-        desktop:
-          type: number
-          description: Total number of desktop vistors
-        total:
-          type: number
-          description: Total number of vistors
-  
