--- a/apps/etdstats/package.json
+++ b/apps/etdstats/package.json
@@ -29,7 +29,9 @@
     "recharts": "^2.1.11",
     "prop-types": "15.8.1",
     "metamask-react": "2.4.0",
-    "react-query": "3.39.1"
+    "react-query": "3.39.1",
+    "dexie": "3.2.2",
+    "dexie-react-hooks": "1.1.1"
   },
   "devDependencies": {
     "@types/node": "18.0.0",
