--- a/node_packages/ui/package.json
+++ b/node_packages/ui/package.json
@@ -23,6 +23,8 @@
     "@mui/system": "5.8.4",
     "recharts": "2.1.11",
     "metamask-react": "2.4.0",
-    "next": "12.1.6"
+    "next": "12.1.6",
+    "qrcode.react": "3.1.0",
+    "material-ui-popup-state": "3.1.1"
   }
 }
