--- a/apps/etdstats/package.json
+++ b/apps/etdstats/package.json
@@ -31,7 +31,8 @@
     "metamask-react": "2.4.0",
     "react-query": "3.39.1",
     "dexie": "3.2.2",
-    "dexie-react-hooks": "1.1.1"
+    "dexie-react-hooks": "1.1.1",
+    "nextjs-google-analytics": "1.2.1"
   },
   "devDependencies": {
     "@types/node": "18.0.0",
