--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "release-it": "^15.1.0",
     "@release-it/conventional-changelog": "^5.0.0",
     "@release-it/bumper": "^4.0.0",
-    "prettier": "^2.7.1"
+    "prettier": "^2.7.1",
+    "@playwright/test": "1.23.0",
+    "wait-on": "6.0.1"
   },
   "scripts": {
     "build": "turbo run build",
@@ -33,6 +35,7 @@
     "start": "turbo run start",
     "release": "release-it",
     "release-dry": "release-it --dry-run",
-    "lint": "prettier --check **/*/*.ts"
+    "lint": "prettier --check **/*/*.ts",
+    "e2e": "npx playwright test"
   }
 }
