feat: update block info
* more accurate block number
* add numUncles support

--- a/node_packages/openapi_specs/specs/block_info_service.yaml
+++ b/node_packages/openapi_specs/specs/block_info_service.yaml
@@ -180,4 +180,7 @@ components:
         rpc:
           type: number
           description: RPC URL
+        numUncles:
+          type: number
+          description: Number of uncle blocks
   
