--- a/node_packages/openapi_specs/specs/transaction_service.spec.yaml
+++ b/node_packages/openapi_specs/specs/transaction_service.spec.yaml
@@ -140,6 +140,10 @@ components:
           type: object
           description: The block which contains this transaction
           $ref: "#/components/schemas/block"
+        fromUserInfo:
+          $ref: "user_service.spec.yaml#/components/schemas/user-info"
+        toUserInfo:
+          $ref: "user_service.spec.yaml#/components/schemas/user-info"
     user:
       type: object
       properties:
@@ -172,6 +176,8 @@ components:
           description: A list of transactions
           items:
             $ref: "#/components/schemas/transaction"
+        userInfo:
+          $ref: "user_service.spec.yaml#/components/schemas/user-info"
 
     block:
       type: "object"
@@ -222,6 +228,8 @@ components:
           type: string
         baseFeePerGas:
           type: number
+        minerInfo:
+          $ref: "user_service.spec.yaml#/components/schemas/user-info"
 
 
 
