--- a/node_packages/ui/package.json
+++ b/node_packages/ui/package.json
@@ -25,6 +25,7 @@
     "metamask-react": "2.4.0",
     "next": "12.1.6",
     "qrcode.react": "3.1.0",
-    "material-ui-popup-state": "3.1.1"
+    "material-ui-popup-state": "3.1.1",
+    "prop-types": "15.7.2"
   }
 }
