--- a/apps/etdstats/package.json
+++ b/apps/etdstats/package.json
@@ -32,9 +32,9 @@
     "react-query": "3.39.1",
     "dexie": "3.2.2",
     "dexie-react-hooks": "1.1.1",
-    "nextjs-google-analytics": "1.2.1",
     "formik": "2.2.9",
-    "@mui/lab": "5.0.0-alpha.88"
+    "@mui/lab": "5.0.0-alpha.88",
+    "firebase": "9.8.4"
   },
   "devDependencies": {
     "@types/node": "18.0.0",
