--- a/apps/etdstats/package.json
+++ b/apps/etdstats/package.json
@@ -17,7 +17,7 @@
     "axios": "0.27.2",
     "dayjs": "^1.11.3",
     "ethers": "5.6.9",
-    "next": "12.1.6",
+    "next": "12.2.0",
     "next-transpile-modules": "9.0.0",
     "openapi_client": "workspace:*",
     "react": "18.2.0",
@@ -32,7 +32,9 @@
     "react-query": "3.39.1",
     "dexie": "3.2.2",
     "dexie-react-hooks": "1.1.1",
-    "nextjs-google-analytics": "1.2.1"
+    "formik": "2.2.9",
+    "@mui/lab": "5.0.0-alpha.88",
+    "firebase": "9.8.4"
   },
   "devDependencies": {
     "@types/node": "18.0.0",
