--- a/apps/etdstats/package.json
+++ b/apps/etdstats/package.json
@@ -6,42 +6,49 @@
     "dev": "next dev --port 3001",
     "build": "next build",
     "start": "next start --port 3001",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "@babel/core": "^7.18.5",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
+    "@mui/lab": "5.0.0-alpha.88",
     "@mui/material": "^5.8.5",
+    "@mui/system": "5.8.5",
+    "@mui/x-data-grid": "^5.12.2",
     "axios": "0.27.2",
     "dayjs": "^1.11.3",
+    "dexie": "3.2.2",
+    "dexie-react-hooks": "1.1.1",
     "ethers": "5.6.9",
+    "firebase": "9.8.4",
+    "formik": "2.2.9",
+    "friendly-numbers": "1.0.1",
+    "metamask-react": "2.4.0",
     "next": "12.2.0",
     "next-transpile-modules": "9.0.0",
     "openapi_client": "workspace:*",
+    "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "friendly-numbers": "1.0.1",
-    "@mui/x-data-grid": "^5.12.2",
-    "@mui/system": "5.8.5",
-    "ui": "workspace:*",
-    "recharts": "^2.1.11",
-    "prop-types": "15.8.1",
-    "metamask-react": "2.4.0",
     "react-query": "3.39.1",
-    "dexie": "3.2.2",
-    "dexie-react-hooks": "1.1.1",
-    "formik": "2.2.9",
-    "@mui/lab": "5.0.0-alpha.88",
-    "firebase": "9.8.4"
+    "recharts": "^2.1.11",
+    "ui": "workspace:*"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "13.3.0",
+    "@types/jest": "28.1.4",
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
     "eslint": "8.18.0",
     "eslint-config-next": "12.1.6",
+    "jest": "28.1.2",
+    "jest-environment-jsdom": "^28.1.2",
+    "ts-jest": "28.0.5",
     "typescript": "4.7.4"
   }
 }
