--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "@release-it/bumper": "^4.0.0",
     "prettier": "^2.7.1",
     "@playwright/test": "1.23.0",
-    "wait-on": "6.0.1"
+    "wait-on": "6.0.1",
+    "firebase-admin": "11.0.0"
   },
   "scripts": {
     "build": "turbo run build",
