--- a/apps/etdstats/package.json
+++ b/apps/etdstats/package.json
@@ -10,45 +10,48 @@
     "test": "jest"
   },
   "dependencies": {
-    "@babel/core": "^7.18.5",
-    "@emotion/react": "^11.9.3",
-    "@emotion/styled": "^11.9.3",
+    "@babel/core": "^7.18.9",
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
     "@mui/icons-material": "^5.8.4",
-    "@mui/lab": "5.0.0-alpha.88",
-    "@mui/material": "^5.8.5",
-    "@mui/system": "5.8.5",
-    "@mui/x-data-grid": "^5.12.2",
+    "@mui/lab": "5.0.0-alpha.92",
+    "@mui/material": "^5.9.2",
+    "@mui/system": "5.9.2",
+    "@mui/x-data-grid": "^5.15.0",
     "axios": "0.27.2",
-    "dayjs": "^1.11.3",
+    "dayjs": "^1.11.4",
     "dexie": "3.2.2",
     "dexie-react-hooks": "1.1.1",
     "ethers": "5.6.9",
-    "firebase": "9.8.4",
+    "firebase": "9.9.1",
     "formik": "2.2.9",
     "friendly-numbers": "1.0.1",
     "metamask-react": "2.4.0",
-    "next": "12.2.0",
+    "next": "12.2.3",
     "next-transpile-modules": "9.0.0",
     "openapi_client": "workspace:*",
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-query": "3.39.1",
-    "recharts": "^2.1.11",
-    "ui": "workspace:*"
+    "react-query": "3.39.2",
+    "recharts": "2.1.11",
+    "ui": "workspace:*",
+    "meilisearch": "0.27.0",
+    "react-highlight-words": "0.18.0",
+    "@types/react-highlight-words": "0.16.4"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "13.3.0",
-    "@types/jest": "28.1.4",
-    "@types/node": "18.0.0",
-    "@types/react": "18.0.14",
-    "@types/react-dom": "18.0.5",
-    "eslint": "8.18.0",
-    "eslint-config-next": "12.1.6",
-    "jest": "28.1.2",
-    "jest-environment-jsdom": "^28.1.2",
-    "ts-jest": "28.0.5",
+    "@types/jest": "28.1.6",
+    "@types/node": "18.6.3",
+    "@types/react": "18.0.15",
+    "@types/react-dom": "18.0.6",
+    "eslint": "8.20.0",
+    "eslint-config-next": "12.2.3",
+    "jest": "28.1.3",
+    "jest-environment-jsdom": "^28.1.3",
+    "ts-jest": "28.0.7",
     "typescript": "4.7.4"
   }
 }
