fix: add showAbi parameter

--- a/apps/etdstats/package.json
+++ b/apps/etdstats/package.json
@@ -13,11 +13,13 @@
     "@babel/core": "^7.18.9",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
+    "@monaco-editor/react": "^4.4.6",
     "@mui/icons-material": "^5.8.4",
     "@mui/lab": "5.0.0-alpha.92",
     "@mui/material": "^5.9.2",
     "@mui/system": "5.9.2",
     "@mui/x-data-grid": "^5.15.0",
+    "@types/react-highlight-words": "0.16.4",
     "axios": "0.27.2",
     "dayjs": "^1.11.4",
     "dexie": "3.2.2",
@@ -26,19 +28,20 @@
     "firebase": "9.9.1",
     "formik": "2.2.9",
     "friendly-numbers": "1.0.1",
+    "meilisearch": "0.27.0",
     "metamask-react": "2.4.0",
+    "monaco-editor": "^0.34.1",
     "next": "13.0.1",
     "next-transpile-modules": "10.0.0",
+    "notistack": "^2.0.8",
     "openapi_client": "workspace:*",
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-highlight-words": "0.18.0",
     "react-query": "3.39.2",
     "recharts": "2.1.11",
-    "ui": "workspace:*",
-    "meilisearch": "0.27.0",
-    "react-highlight-words": "0.18.0",
-    "@types/react-highlight-words": "0.16.4"
+    "ui": "workspace:*"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.4",
