--- a/node_packages/openapi_specs/specs/contracrt_service.yaml
+++ b/node_packages/openapi_specs/specs/contracrt_service.yaml
@@ -20,26 +20,6 @@ servers:
 
 paths:
   /contract:
-    post:
-      tags:
-        - "contract"
-      security:
-        - bearerAuth: [write]
-      summary: "Create a new contract"
-      description: "Will returns the contract result from server"
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/contract"
-        required: true
-      responses:
-        "201":
-          description: "OK"
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/contract"
     get:
       tags:
         - "contract"
@@ -57,6 +37,12 @@ paths:
           schema:
             type: integer
             default: 10
+        - in: query
+          name: showAbi
+          schema:
+            type: string
+            default: false
+          description: Show contract abi in the response
       responses:
         "200":
           description: "OK"
@@ -70,7 +56,22 @@ paths:
                   items:
                     type: array
                     items:
-                      $ref: "#/components/schemas/contract"
+                      type: object
+                      properties:
+                        address:
+                          type: string
+                        name:
+                          type: string
+                        id:
+                          type: string
+                        blockHash:
+                          type: string
+                        creator:
+                          type: string
+                        transactionHash:
+                          type: string
+                        lastScannedBlock:
+                          type: integer
                   
 
   /contract/{contract_address}:
@@ -92,15 +93,18 @@ paths:
           content:
             application/json:
               schema:
-                allOf:
-                  - $ref: "#/components/schemas/contract"
-                  - type: object
-                    properties:
-                      id: 
-                        type: string
-                        format: uuid
-                        description: The contract id
-                        example: 7e6b7e6b-7e6b-7e6b-7e6b-7e6b7e6b7e6b
+                type: object
+                properties:
+                  name:
+                    type: string
+                  address:
+                    type: string
+                  source:
+                    type: string
+                  abi:
+                    type: array
+                  compiler:
+                    type: string
     
     patch:
       tags:
@@ -289,6 +293,18 @@ components:
           type: integer
           description: The last scanned block of the contract
           default: 0
+        transactionHash:
+          type: string
+          description: The transaction hash of the contract
+        blockHash:
+          type: string
+          description: The block hash of the contract
+        creator:
+          type: string
+          description: The creator of the contract
+        name:
+          type: string
+          description: The name of the contract
     
     event:
       type: object
