--- a/apps/etdstats/package.json
+++ b/apps/etdstats/package.json
@@ -11,14 +11,14 @@
   },
   "dependencies": {
     "@babel/core": "^7.20.2",
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
+    "@emotion/react": "11.10.5",
+    "@emotion/styled": "11.10.5",
     "@monaco-editor/react": "^4.4.6",
-    "@mui/icons-material": "^5.10.9",
+    "@mui/icons-material": "5.10.9",
     "@mui/lab": "5.0.0-alpha.106",
-    "@mui/material": "^5.10.12",
+    "@mui/material": "5.10.12",
     "@mui/system": "5.10.12",
-    "@mui/x-data-grid": "^5.17.10",
+    "@mui/x-data-grid": "5.17.10",
     "@types/react-highlight-words": "0.16.4",
     "axios": "1.1.3",
     "dayjs": "^1.11.6",
