--- a/node_packages/ui/package.json
+++ b/node_packages/ui/package.json
@@ -13,11 +13,11 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
-    "@babel/core": "^7.18.5",
-    "@emotion/react": "^11.9.3",
-    "@emotion/styled": "^11.9.3",
-    "@mui/icons-material": "^5.10.9",
-    "@mui/material": "^5.10.12",
+    "@babel/core": "7.18.5",
+    "@emotion/react": "11.9.3",
+    "@emotion/styled": "11.9.3",
+    "@mui/icons-material": "5.10.9",
+    "@mui/material": "5.10.12",
     "@types/react": "18.0.14",
     "@mui/x-data-grid": "5.17.9",
     "@mui/system": "5.10.12",
